--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,22 +15,23 @@ services:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf # 作成したdefault.confを/etc/nginx/conf.d/default.confにマウント
     restart: always
     ports:
-      - "8080:80" # ホストの8000ポートでnginxコンテナの80にアクセス
+      - 8080:80 # ホストの8000ポートでnginxコンテナの80にアクセス
     links:
       - php-fpm # php-fpmの起動後にnginxを起動
   
   db:
-    image: mysql:8.0.18 # mysqlのimageにmysql:8.0.18を指定
-    container_name: "db"
+    #image: mysql:8.0.18 # mysqlのimageにmysql:8.0.18を指定
+    image: mysql:5.7
+    container_name: db-host
     volumes:
       - ./docker/mysql/conf.d:/etc/mysql/conf.d # mysqlのせってファイルをマウント
       - ./docker/mysql/data:/var/lib/mysql # mysqlのデータ永続化
     ports:
-      - 3306:3306
+      - 4306:3306
     environment:
-      MYSQL_DATABASE: hogehoge
-      MYSQL_USER: hoge
-      MYSQL_PASSWORD: hoge
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: database
+      MYSQL_USER: docker
+      MYSQL_PASSWORD: docker
       TZ: "Asia/Tokyo"
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
